src/main/java/com/test/mapper/mapper/expression/parser/Parser.java
/*
 * Copyright (C) 2017 Red Hat, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
/**
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.test.mapper.mapper.expression.parser;

import com.test.mapper.mapper.expression.Expression;
import com.test.mapper.mapper.expression.FunctionResolver;
import com.test.mapper.mapper.expression.internal.ArithmeticExpression;
import com.test.mapper.mapper.expression.internal.ComparisonExpression;
import com.test.mapper.mapper.expression.internal.ConstantExpression;
import com.test.mapper.mapper.expression.internal.LogicExpression;
import com.test.mapper.mapper.expression.internal.Strings;
import com.test.mapper.mapper.expression.internal.UnaryExpression;
import com.test.mapper.mapper.expression.internal.VariableExpression;

import java.util.ArrayList;

import static com.test.mapper.mapper.expression.internal.BooleanExpression.asBooleanExpression;

/**
 * Parser for AtlasMap expressions.
 *
 * Do not edit this .java file directly - it is autogenerated from Parser.jj
 */
public class Parser implements ParserConstants {


    public FunctionResolver functionResolver;

    // ----------------------------------------------------------------------------
// Grammar
// ----------------------------------------------------------------------------
    final public Expression parse() throws ParseException {Expression left=null;
        // Look for expressions in reverse precedence order.
        left = orExpression();
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression orExpression() throws ParseException {Expression left;
        Expression right;
        // And expressions have higher precedence than or expressions and so on..
        left = andExpression();
        label_1:
        while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case OR:{
                    ;
                    break;
                }
                default:
                    break label_1;
            }
            jj_consume_token(OR);
            right = andExpression();
            left = LogicExpression.createOR(asBooleanExpression(left), asBooleanExpression(right));
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression andExpression() throws ParseException {Expression left;
        Expression right;
        left = equalityExpression();
        label_2:
        while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case AND:{
                    ;
                    break;
                }
                default:
                    break label_2;
            }
            jj_consume_token(AND);
            right = equalityExpression();
            left = LogicExpression.createAND(asBooleanExpression(left), asBooleanExpression(right));
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression equalityExpression() throws ParseException {Expression left;
        Expression right;
        left = comparisonExpression();
        label_3:
        while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 22:
                case 23:{
                    ;
                    break;
                }
                default:
                    break label_3;
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 22:{
                    jj_consume_token(22);
                    right = comparisonExpression();
                    left = ComparisonExpression.createEqual(left, right);
                    break;
                }
                case 23:{
                    jj_consume_token(23);
                    right = comparisonExpression();
                    left = ComparisonExpression.createNotEqual(left, right);
                    break;
                }
                default:
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression comparisonExpression() throws ParseException {Expression left;
        Expression right;
        Expression low;
        Expression high;
        String t, u;
        boolean not;
        ArrayList list;
        left = addExpression();
        label_4:
        while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 22:
                case 24:
                case 25:
                case 26:
                case 27:{
                    ;
                    break;
                }
                default:
                    break label_4;
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 24:{
                    jj_consume_token(24);
                    right = addExpression();
                    left = ComparisonExpression.createGreaterThan(left, right);
                    break;
                }
                case 25:{
                    jj_consume_token(25);
                    right = addExpression();
                    left = ComparisonExpression.createGreaterThanEqual(left, right);
                    break;
                }
                case 26:{
                    jj_consume_token(26);
                    right = addExpression();
                    left = ComparisonExpression.createLessThan(left, right);
                    break;
                }
                case 27:{
                    jj_consume_token(27);
                    right = addExpression();
                    left = ComparisonExpression.createLessThanEqual(left, right);
                    break;
                }
                case 22:{
                    jj_consume_token(22);
                    right = addExpression();
                    left = ComparisonExpression.createEqual(left, right);
                    break;
                }
                default:
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression addExpression() throws ParseException {Expression left;
        Expression right;
        left = multExpr();
        label_5:
        while (true) {
            if (jj_2_1(2147483647)) {
                ;
            } else {
                break label_5;
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 28:{
                    jj_consume_token(28);
                    right = multExpr();
                    left = ArithmeticExpression.createPlus(left, right);
                    break;
                }
                case 29:{
                    jj_consume_token(29);
                    right = multExpr();
                    left = ArithmeticExpression.createMinus(left, right);
                    break;
                }
                default:
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression multExpr() throws ParseException {Expression left;
        Expression right;
        left = unaryExpr();
        label_6:
        while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 30:
                case 31:
                case 32:{
                    ;
                    break;
                }
                default:
                    break label_6;
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 30:{
                    jj_consume_token(30);
                    right = unaryExpr();
                    left = ArithmeticExpression.createMultiply(left, right);
                    break;
                }
                case 31:{
                    jj_consume_token(31);
                    right = unaryExpr();
                    left = ArithmeticExpression.createDivide(left, right);
                    break;
                }
                case 32:{
                    jj_consume_token(32);
                    right = unaryExpr();
                    left = ArithmeticExpression.createMod(left, right);
                    break;
                }
                default:
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression unaryExpr() throws ParseException {String s=null;
        Expression left=null;
        if (jj_2_2(2147483647)) {
            jj_consume_token(28);
            left = unaryExpr();
        } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 29:{
                    jj_consume_token(29);
                    left = unaryExpr();
                    left = UnaryExpression.createNegate(left);
                    break;
                }
                case 33:{
                    jj_consume_token(33);
                    left = unaryExpr();
                    left = UnaryExpression.createNOT( asBooleanExpression(left) );
                    break;
                }
                case TRUE:
                case FALSE:
                case NULL:
                case DECIMAL_LITERAL:
                case ZERO:
                case HEX_LITERAL:
                case OCTAL_LITERAL:
                case FLOATING_POINT_LITERAL:
                case STRING_LITERAL:
                case ID:
                case VARIABLE:
                case 34:{
                    left = primaryExpr();
                    break;
                }
                default:
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression primaryExpr() throws ParseException {Expression left=null;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case TRUE:
            case FALSE:
            case NULL:
            case DECIMAL_LITERAL:
            case ZERO:
            case HEX_LITERAL:
            case OCTAL_LITERAL:
            case FLOATING_POINT_LITERAL:
            case STRING_LITERAL:{
                left = literal();
                break;
            }
            case VARIABLE:{
                left = variable();
                break;
            }
            case 34:{
                jj_consume_token(34);
                left = orExpression();
                jj_consume_token(35);
                break;
            }
            case ID:{
                left = functionExpr();
                break;
            }
            default:
                jj_consume_token(-1);
                throw new ParseException();
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public Expression functionExpr() throws ParseException {Token functionName;
        Expression left=null;
        Expression arg=null;
        ArrayList args = new ArrayList();
        functionName = jj_consume_token(ID);
        jj_consume_token(34);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case TRUE:
            case FALSE:
            case NULL:
            case DECIMAL_LITERAL:
            case ZERO:
            case HEX_LITERAL:
            case OCTAL_LITERAL:
            case FLOATING_POINT_LITERAL:
            case STRING_LITERAL:
            case ID:
            case VARIABLE:
            case 28:
            case 29:
            case 33:
            case 34:{
                arg = orExpression();
                args.add( arg );
                label_7:
                while (true) {
                    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                        case 36:{
                            ;
                            break;
                        }
                        default:
                            break label_7;
                    }
                    jj_consume_token(36);
                    arg = orExpression();
                    args.add( arg );
                }
                break;
            }
            default:
                ;
        }
        jj_consume_token(35);
        {if ("" != null) return functionResolver.resolve(functionName.image, args);};
        throw new Error("Missing return statement in function");
    }

    final public ConstantExpression literal() throws ParseException {Token t;
        String s;
        ConstantExpression left=null;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case STRING_LITERAL:{
                s = stringLiteral();
                left = new ConstantExpression(s);
                break;
            }
            case DECIMAL_LITERAL:{
                t = jj_consume_token(DECIMAL_LITERAL);
                left = ConstantExpression.createFromDecimal(t.image);
                break;
            }
            case ZERO:{
                t = jj_consume_token(ZERO);
                left = ConstantExpression.createFromDecimal(t.image);
                break;
            }
            case HEX_LITERAL:{
                t = jj_consume_token(HEX_LITERAL);
                left = ConstantExpression.createFromHex(t.image);
                break;
            }
            case OCTAL_LITERAL:{
                t = jj_consume_token(OCTAL_LITERAL);
                left = ConstantExpression.createFromOctal(t.image);
                break;
            }
            case FLOATING_POINT_LITERAL:{
                t = jj_consume_token(FLOATING_POINT_LITERAL);
                left = ConstantExpression.createFloat(t.image);
                break;
            }
            case TRUE:{
                jj_consume_token(TRUE);
                left = ConstantExpression.TRUE;
                break;
            }
            case FALSE:{
                jj_consume_token(FALSE);
                left = ConstantExpression.FALSE;
                break;
            }
            case NULL:{
                jj_consume_token(NULL);
                left = ConstantExpression.NULL;
                break;
            }
            default:
                jj_consume_token(-1);
                throw new ParseException();
        }
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    final public String stringLiteral() throws ParseException {Token t;
        StringBuffer rc = new StringBuffer();
        boolean first=true;
        t = jj_consume_token(STRING_LITERAL);
// Decode the sting value.
        String image = t.image;
        for( int i=1; i < image.length()-1; i++ ) {
            char c = image.charAt(i);
            if( c == '\'' )
                i++;
            rc.append(c);
        }
        {if ("" != null) return rc.toString();}
        throw new Error("Missing return statement in function");
    }

    final public VariableExpression variable() throws ParseException {Token t;
        VariableExpression left=null;
        t = jj_consume_token(VARIABLE);
        left = new VariableExpression(Strings.stripSuffix(Strings.stripPrefix(t.image, "${"), "}"));
        {if ("" != null) return left;}
        throw new Error("Missing return statement in function");
    }

    private boolean jj_2_1(int xla)
    {
        jj_la = xla; jj_lastpos = jj_scanpos = token;
        try { return (!jj_3_1()); }
        catch(LookaheadSuccess ls) { return true; }
    }

    private boolean jj_2_2(int xla)
    {
        jj_la = xla; jj_lastpos = jj_scanpos = token;
        try { return (!jj_3_2()); }
        catch(LookaheadSuccess ls) { return true; }
    }

    private boolean jj_3R_andExpression_176_13_41()
    {
        if (jj_scan_token(AND)) return true;
        if (jj_3R_equalityExpression_193_5_40()) return true;
        return false;
    }

    private boolean jj_3R_functionExpr_371_5_26()
    {
        if (jj_scan_token(ID)) return true;
        if (jj_scan_token(34)) return true;
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_functionExpr_374_17_38()) jj_scanpos = xsp;
        if (jj_scan_token(35)) return true;
        return false;
    }

    private boolean jj_3R_addExpression_267_13_49()
    {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_addExpression_269_17_55()) {
            jj_scanpos = xsp;
            if (jj_3R_addExpression_274_17_56()) return true;
        }
        return false;
    }

    private boolean jj_3R_literal_460_9_35()
    {
        if (jj_scan_token(NULL)) return true;
        return false;
    }

    private boolean jj_3R_andExpression_173_5_36()
    {
        if (jj_3R_equalityExpression_193_5_40()) return true;
        Token xsp;
        while (true) {
            xsp = jj_scanpos;
            if (jj_3R_andExpression_176_13_41()) { jj_scanpos = xsp; break; }
        }
        return false;
    }

    private boolean jj_3R_literal_453_9_34()
    {
        if (jj_scan_token(FALSE)) return true;
        return false;
    }

    private boolean jj_3R_addExpression_265_5_45()
    {
        if (jj_3R_multExpr_292_5_8()) return true;
        Token xsp;
        while (true) {
            xsp = jj_scanpos;
            if (jj_3R_addExpression_267_13_49()) { jj_scanpos = xsp; break; }
        }
        return false;
    }

    private boolean jj_3R_primaryExpr_356_9_22()
    {
        if (jj_3R_functionExpr_371_5_26()) return true;
        return false;
    }

    private boolean jj_3R_primaryExpr_354_9_21()
    {
        if (jj_scan_token(34)) return true;
        if (jj_3R_orExpression_150_5_25()) return true;
        if (jj_scan_token(35)) return true;
        return false;
    }

    private boolean jj_3R_primaryExpr_352_9_20()
    {
        if (jj_3R_variable_499_5_24()) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_248_17_54()
    {
        if (jj_scan_token(22)) return true;
        if (jj_3R_addExpression_265_5_45()) return true;
        return false;
    }

    private boolean jj_3R_literal_446_9_33()
    {
        if (jj_scan_token(TRUE)) return true;
        return false;
    }

    private boolean jj_3R_primaryExpr_350_9_19()
    {
        if (jj_3R_literal_403_5_23()) return true;
        return false;
    }

    private boolean jj_3R_orExpression_154_13_37()
    {
        if (jj_scan_token(OR)) return true;
        if (jj_3R_andExpression_173_5_36()) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_243_17_53()
    {
        if (jj_scan_token(27)) return true;
        if (jj_3R_addExpression_265_5_45()) return true;
        return false;
    }

    private boolean jj_3R_primaryExpr_349_5_18()
    {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_primaryExpr_350_9_19()) {
            jj_scanpos = xsp;
            if (jj_3R_primaryExpr_352_9_20()) {
                jj_scanpos = xsp;
                if (jj_3R_primaryExpr_354_9_21()) {
                    jj_scanpos = xsp;
                    if (jj_3R_primaryExpr_356_9_22()) return true;
                }
            }
        }
        return false;
    }

    private boolean jj_3R_literal_439_9_32()
    {
        if (jj_scan_token(FLOATING_POINT_LITERAL)) return true;
        return false;
    }

    private boolean jj_3_2()
    {
        if (jj_scan_token(28)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_238_17_52()
    {
        if (jj_scan_token(26)) return true;
        if (jj_3R_addExpression_265_5_45()) return true;
        return false;
    }

    private boolean jj_3R_unaryExpr_336_13_14()
    {
        if (jj_3R_primaryExpr_349_5_18()) return true;
        return false;
    }

    private boolean jj_3R_literal_432_9_31()
    {
        if (jj_scan_token(OCTAL_LITERAL)) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_233_17_51()
    {
        if (jj_scan_token(25)) return true;
        if (jj_3R_addExpression_265_5_45()) return true;
        return false;
    }

    private boolean jj_3R_orExpression_150_5_25()
    {
        if (jj_3R_andExpression_173_5_36()) return true;
        Token xsp;
        while (true) {
            xsp = jj_scanpos;
            if (jj_3R_orExpression_154_13_37()) { jj_scanpos = xsp; break; }
        }
        return false;
    }

    private boolean jj_3R_unaryExpr_331_13_13()
    {
        if (jj_scan_token(33)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_228_17_50()
    {
        if (jj_scan_token(24)) return true;
        if (jj_3R_addExpression_265_5_45()) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_228_17_46()
    {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_comparisonExpression_228_17_50()) {
            jj_scanpos = xsp;
            if (jj_3R_comparisonExpression_233_17_51()) {
                jj_scanpos = xsp;
                if (jj_3R_comparisonExpression_238_17_52()) {
                    jj_scanpos = xsp;
                    if (jj_3R_comparisonExpression_243_17_53()) {
                        jj_scanpos = xsp;
                        if (jj_3R_comparisonExpression_248_17_54()) return true;
                    }
                }
            }
        }
        return false;
    }

    private boolean jj_3R_unaryExpr_323_17_11()
    {
        if (jj_scan_token(28)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }

    private boolean jj_3R_unaryExpr_326_13_12()
    {
        if (jj_scan_token(29)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }

    private boolean jj_3R_literal_425_9_30()
    {
        if (jj_scan_token(HEX_LITERAL)) return true;
        return false;
    }

    private boolean jj_3R_literal_418_9_29()
    {
        if (jj_scan_token(ZERO)) return true;
        return false;
    }

    private boolean jj_3R_unaryExpr_322_9_9()
    {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_unaryExpr_323_17_11()) {
            jj_scanpos = xsp;
            if (jj_3R_unaryExpr_326_13_12()) {
                jj_scanpos = xsp;
                if (jj_3R_unaryExpr_331_13_13()) {
                    jj_scanpos = xsp;
                    if (jj_3R_unaryExpr_336_13_14()) return true;
                }
            }
        }
        return false;
    }

    private boolean jj_3R_literal_411_9_28()
    {
        if (jj_scan_token(DECIMAL_LITERAL)) return true;
        return false;
    }

    private boolean jj_3R_comparisonExpression_224_5_43()
    {
        if (jj_3R_addExpression_265_5_45()) return true;
        Token xsp;
        while (true) {
            xsp = jj_scanpos;
            if (jj_3R_comparisonExpression_228_17_46()) { jj_scanpos = xsp; break; }
        }
        return false;
    }

    private boolean jj_3R_literal_404_9_27()
    {
        if (jj_3R_stringLiteral_479_5_39()) return true;
        return false;
    }

    private boolean jj_3R_variable_499_5_24()
    {
        if (jj_scan_token(VARIABLE)) return true;
        return false;
    }

    private boolean jj_3R_multExpr_304_9_17()
    {
        if (jj_scan_token(32)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }

    private boolean jj_3R_literal_403_5_23()
    {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_literal_404_9_27()) {
            jj_scanpos = xsp;
            if (jj_3R_literal_411_9_28()) {
                jj_scanpos = xsp;
                if (jj_3R_literal_418_9_29()) {
                    jj_scanpos = xsp;
                    if (jj_3R_literal_425_9_30()) {
                        jj_scanpos = xsp;
                        if (jj_3R_literal_432_9_31()) {
                            jj_scanpos = xsp;
                            if (jj_3R_literal_439_9_32()) {
                                jj_scanpos = xsp;
                                if (jj_3R_literal_446_9_33()) {
                                    jj_scanpos = xsp;
                                    if (jj_3R_literal_453_9_34()) {
                                        jj_scanpos = xsp;
                                        if (jj_3R_literal_460_9_35()) return true;
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
        return false;
    }

    private boolean jj_3R_equalityExpression_202_13_48()
    {
        if (jj_scan_token(23)) return true;
        if (jj_3R_comparisonExpression_224_5_43()) return true;
        return false;
    }

    private boolean jj_3R_multExpr_299_9_16()
    {
        if (jj_scan_token(31)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }

    private boolean jj_3R_equalityExpression_197_13_47()
    {
        if (jj_scan_token(22)) return true;
        if (jj_3R_comparisonExpression_224_5_43()) return true;
        return false;
    }

    private boolean jj_3R_equalityExpression_197_13_44()
    {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_equalityExpression_197_13_47()) {
            jj_scanpos = xsp;
            if (jj_3R_equalityExpression_202_13_48()) return true;
        }
        return false;
    }

    private boolean jj_3R_functionExpr_379_21_42()
    {
        if (jj_scan_token(36)) return true;
        if (jj_3R_orExpression_150_5_25()) return true;
        return false;
    }

    private boolean jj_3R_multExpr_294_9_15()
    {
        if (jj_scan_token(30)) return true;
        if (jj_3R_unaryExpr_322_9_9()) return true;
        return false;
    }
